force-app/main/default/objects/PBIS_Incentive_Slab__c/PBIS_Incentive_Slab__c.object-meta.xml
<CustomObject>
    <description>Primary PBIS incentive slab (Task 2). Per Policy and Profile, a slab band (from/to %) with its monthly and quarterly percentage of gross.</description>
    <label>PBIS Incentive Slab</label>
    <nameField>
        <displayFormat>PSLB-{0000}</displayFormat>
        <label>PBIS Incentive Slab Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PBIS Incentive Slabs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>