force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/Achievement_From__c.field-meta.xml
<CustomField>
    <fullName>Achievement_From__c</fullName>
    <label>Achievement From %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>