force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/Achievement_To__c.field-meta.xml
<CustomField>
    <fullName>Achievement_To__c</fullName>
    <label>Achievement To %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>