force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/Monthly_Incentive_Percent__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Incentive_Percent__c</fullName>
    <label>Monthly Incentive % of Gross</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>