force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/PBIS_Policy__c.field-meta.xml
<CustomField>
    <fullName>PBIS_Policy__c</fullName>
    <label>PBIS Policy</label>
    <referenceTo>PBIS_Policy__c</referenceTo>
    <relationshipName>Incentive_Slabs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>