force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/Profile__c.field-meta.xml
<CustomField>
    <fullName>Profile__c</fullName>
    <inlineHelpText>The profile/designation this slab applies to.</inlineHelpText>
    <label>Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Profile</valueSetName>
    </valueSet>
</CustomField>