force-app/main/default/objects/PBIS_Incentive_Slab__c/fields/Slab_Number__c.field-meta.xml
<CustomField>
    <fullName>Slab_Number__c</fullName>
    <label>Slab Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>